test/fails/bad_casts/as2.lgl
type a is float[2];
type b is float[3];

void main() {
    a avec = [1., 1.];

    b fail = avec as! b; // Bad dimensions
    print 1;
}